# my_ftp

./: .gitignore  CMakeLists.txt  Makefile  ns_auth.py  server  test_thomas.sh
bootstrap/server/: server  server.c
include/: my_ftp.h
src/: check_arg.c  main.c
src/basics/: disp_tab.c  free_tab.c  str_to_wordtab.c  tablen.c
src/command/: cdup.c  cwd.c  dele.c  help.c  list.c  manage_command.c  noop.c  pass.c  pasv.c  port.c  pwd.c  quit.c  retr.c  stor.c  user.c
src/init/: init_manage_command.c  init_server.c
src/server/: error_server.c  manage_list_client.c  print_client.c  server.c
